--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>NLW Expert | Rocketseat</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Teste seus conhecimentos</h1>
+
+    <div id="quiz"></div>
+    <template>
+      <div class="quiz-item">
+        <h3>pergunta 01</h3>
+        <dl>
+          <dt>
+            <input type="radio" name="item" value="0" />
+            <span> Resposta A </span>
+          </dt>
+        </dl>
+      </div>
+    </template>
+
+
+    <script src="script.js"></script>
+  </body>
 </html>
