--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
     <title>NLW Expert | Rocketseat</title>
   </head>
   <body>
-    <h1>Teste seus conhecimentos</h1>
+    <main>
+      <h1>Teste seus conhecimentos</h1>
 
-    <div id="quiz"></div>
-    <template>
-      <div class="quiz-item">
-        <h3>pergunta 01</h3>
-        <dl>
-          <dt>
-            <input type="radio" name="item" value="0" />
-            <span> Resposta A </span>
-          </dt>
-        </dl>
+      <div id="quiz"></div>
+      <template>
+        <div class="quiz-item">
+          <h3>pergunta 01</h3>
+          <dl>
+            <dt>
+              <input type="radio" name="item" value="0" />
+              <span> Resposta A </span>
+            </dt>
+          </dl>
+        </div>
+      </template>
+
+      <div id="acertor">
+        <strong>Acertos</strong>
+        <span>0 de 10</span>
       </div>
-    </template>
-
-
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
