--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <main>
-      <h1>Teste seus conhecimentos</h1>
+
+      <header>
+        <img src="https://gist.githubusercontent.com/maykbrito/f47569e32fb2b21f2ecc9f4c035c141f/raw/a45997404564112d7596fbb1b9cad5de5521927e/logo.svg" alt="Logo NLW">
+        <h1>Teste seus conhecimentos</h1>
+      </header>
 
       <div id="quiz"></div>
       <template>
@@ -23,7 +27,7 @@
         </div>
       </template>
 
-      <div id="acertor">
+      <div id="acertos">
         <strong>Acertos</strong>
         <span>0 de 10</span>
       </div>
